--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ canonifyurls = true
 pygmentsstyle = "b2"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
+googleAnalytics = "UA-106768190-2"
 
 #disqusShortname = "yourdiscussshortname"
 
