--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ defaultcontentlanguage = "en"
 paginate = 20
 canonifyurls = true
 
-pygmentsstyle = "b2"
+pygmentsstyle = "friendly"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 googleAnalytics = "UA-106768190-2"
