--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "public"]
-	path = public
-	url = git@personal:pylenin/pylenin.github.io.git
-	branch = master
+[submodule "themes/hugo-coder"]
+	path = themes/hugo-coder
+	url = "https://github.com/luizdepra/hugo-coder"
