Add fb group for career guidance to menu

--- a/config.toml
+++ b/config.toml
@@ -90,7 +90,7 @@ googleAnalytics = "UA-106768190-2"
         url = "https://www.youtube.com/pylenin/"
 
         [[languages.en.menu.main]]
-        name = "Join my Newsletter"
+        name = "Career Guidance"
         weight = 3
-        url = "http://eepurl.com/dNrCHA"
+        url = "https://www.facebook.com/groups/2571658526188257/"
 
