Add a video of the day page

--- a/config.toml
+++ b/config.toml
@@ -85,17 +85,22 @@ googleAnalytics = "UA-106768190-2"
         url = "/blogs/"
 
         [[languages.en.menu.main]]
-        name = "Youtube"
+        name = "Video of the Day"
         weight = 2
+        url = "/video-of-the-day/"
+
+        [[languages.en.menu.main]]
+        name = "Youtube"
+        weight = 3
         url = "https://www.youtube.com/pylenin/"
 
         [[languages.en.menu.main]]
         name = "Career Guidance"
-        weight = 3
+        weight = 4
         url = "https://www.facebook.com/groups/2571658526188257/"
 
         [[languages.en.menu.main]]
         name = "Support us on Patreon"
-        weight = 4
+        weight = 5
         url = "https://www.patreon.com/join/pylenin?"
 
